{{$NEXT}}

1.302014  2015-10-03 20:30:14-07:00 America/Los_Angeles

    - Another Delta.t fix

1.302013  2015-10-02 21:51:45-07:00 America/Los_Angeles

    - Fix Util.t for some Term::ReadKey versions

1.302012  2015-10-01 15:42:27-07:00 America/Los_Angeles

    - Remove reservations file
    - Documentation updates (add missing docs)
    - Fix output handle in subtest diagnostics
    - Better subtest diagnostics
    - Whitespace fixes
    - Better error handling in threads in the workflows
    - Better support real fork vs pseudo fork

1.302011  2015-09-30 21:05:57-07:00 America/Los_Angeles

    - Documentation updates, typo fixes
    - Be safer, and less verbose, when detecting term size
    - Fix isolation in the spec plugin in windows
    - Skip sync test on windows (temporary measure)
    - Skip the hub.t fork check on windows (temporary measure)
    - Add some debugging to CanThread
    - Fix global event handling on platforms that do not use '/' for path
    - Fix Delta.t on systems with large memory addresses

1.302010  2015-09-29 22:23:28-07:00 America/Los_Angeles

    - Add spec plugin (with basic workflows modules)
    - Switch to plugin architecture, Test::Stream is just a loader
    - Add plugins (many of these were non-plugins before)
        AuthorTest          BailOnFail          Capabilities
        Capture             Class               Compare
        Context             Core                Defer
        DieOnFail           Exception           ExitSummary
        Grab                IPC                 Intercept
        LoadPlugin          Mock                SRand
        SkipWithout         Spec                Subtest
        TAP                 UTF8                Warnings
    - CanFork is now a plugin
    - CanThread is now a plugin
    - Subtest stack fallback fix
    - Better Compare library
    - Documentation is fleshed out and mostly complete
    - Unit testing coverage is now satisfactory